--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,13 @@
       <artifactId>spring-beans</artifactId>
       <version>5.2.0.RELEASE</version>
     </dependency>
-    <dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.2.0.RELEASE</version>
+      </dependency>
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
